bug correction on small devices

--- a/css/styles_var.css
+++ b/css/styles_var.css
@@ -12,7 +12,7 @@
 html {
   
   font-family:"Vani Bold" !important;
-    font-size:16px;font-style:normal;
+    font-size:1em;font-style:normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
